src/templating/snapshots/yolk__templating__parser__test__error_incomplete_multiline.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\").unwrap_err())"
snapshot_kind: text
---
  × Failed to parse yolk template file

Error: 
  × Expected newline
   ╭─[file:1:1]
 1 │ {%f%}
   · ──┬──
   ·   ╰── here
   ╰────
